# real-ruflo

./: .gitignore  ARCHITECTURE.md  Cargo.toml  LICENSE  README.md  ROADMAP.md
.github/workflows/: ci.yml
bench/: README.md
bindings/node/: Cargo.toml  package-lock.json  package.json
bindings/node/hooks/: README.md  handler.js  install.js  namespace.js
bindings/node/server/: README.md  index.js
bindings/node/src/: lib.rs
crates/memory/: Cargo.toml
crates/memory/src/: embed.rs  lib.rs  schema.rs  search.rs  store.rs
crates/orchestrate/: Cargo.toml
crates/orchestrate/src/: brief.rs  lib.rs  schema.rs  state.rs
docs/design/: memory.md
docs/journal/: 2026-05-20-initial-build.md
examples/: phases-codebase-audit.yaml
