[workspace]
resolver = "2"
members = [
    "crates/memory",
    "bindings/node",
]

[workspace.package]
edition = "2021"
license = "MIT"
authors = ["Sean Eragan <seaneragan@msn.com>"]
repository = "https://github.com/seaneragan/real-ruflo"
rust-version = "1.80"

[workspace.dependencies]
# Storage
rusqlite = { version = "0.31", features = ["bundled", "blob"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Hashing
blake3 = "1.5"

# Errors
thiserror = "1"
anyhow = "1"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Node bindings
napi = { version = "2", default-features = false, features = ["napi9", "serde-json"] }
napi-derive = "2"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
opt-level = 3
