[package]
name = "real-ruflo-node"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "NAPI-rs Node bindings for Real Ruflo."

[lib]
crate-type = ["cdylib"]

[dependencies]
real-ruflo-memory = { path = "../../crates/memory" }
napi.workspace = true
napi-derive.workspace = true
serde.workspace = true
serde_json.workspace = true

[build-dependencies]
napi-build = "2"
